--- a/src/styles/_productsPage.scss
+++ b/src/styles/_productsPage.scss
@@ -156,12 +156,12 @@
                     margin: 20px 0;
                 }
 
-                .price {
+                .price-block {
                     margin: 20px 0;
                     font-size: 22px;
                     font-weight: bold;
 
-                    span {
+                    .promotionalPrice {
                         color: #ACACAC;
                         text-decoration: line-through;
                         font-size: 20px;
